terraform/aws-modules/vpc/vpc.tf
resource "aws_vpc" "vpc" {
    cidr_block = var.vpc_cidr

    tags = {
        Name   = format("%s-vpc", var.vpc_name)
    }
}
